made it ignore clicks if y column is not filled, removed bogus fixits, separated out stuff unique to lines, made invisible class actually invisible

--- a/web/PlotCurves.css
+++ b/web/PlotCurves.css
@@ -65,6 +65,7 @@ table{
 	border: none;
 	text-align: right;
 	color: #663300;
+	background: #663300;
 }
 .line
 {
